# 51-learning

./: .gitignore  .gitmodules  LICENSE  README.md
0-库/: library-list.md  library_src.docx  library_src.html  library_src.md  ~$brary_src.docx
1-GPS时钟/: 1-工程案例.code-workspace  Template.uvgui.ThinkPad
1-GPS时钟/0.96‘OLED-SPI/: OLED_GUI.c
1-GPS时钟/Listings/: BMP.lst  GPS.lst  OLED_GUI.lst  Rotary_Encoder.lst  SPI.lst  Template.m51  bme280.lst  delay.lst  iic.lst  key.lst  main.lst  oled.lst
1-GPS时钟/Objects/: BMP.__i  Template  Template.build_log.htm  Template.hex  iic.__i  key.__i
1-GPS时钟/USER/: main.c
1-Template/: Template.uvgui.ThinkPad  Template.uvgui_ThinkPad.bak  Template.uvopt  Template.uvproj  Template_uvproj.bak
1-Template/Listings/: Template.m51  Template.map  main.lst
1-工程案例/: Template.uvgui.ThinkPad
1工程案例/: Target 1.BAT  Template.uvgui.ThinkPad  Template.uvgui.‘ J ’  Template.uvproj
2-GPS时钟/: Template.uvgui.ThinkPad  Template.uvopt  Template.uvproj
3-数码管计时器/: Template.uvgui.ThinkPad  Template.uvopt  Template.uvproj
4-2021省赛/: Template.uvgui.ThinkPad  Template.uvopt  Template.uvproj
4-单片机比赛工程模板/: ADC.lst  AT24C02.lst  CMakeLists.txt  DS18B20.lst  Debug.BAT  Digital_tube.lst  HX711.lst  IO_expand.lst  LCD1602.lst  PCF8591.lst  PWM.lst  README.md  as608.lst  buzz.lst  delay.lst  ds1302.lst  int_it.lst  key.lst  main.lst  mpu6050.lst  parallel_12864.lst  project.m51  project.map  project.uvgui.Jay  project.uvgui.lingj  project.uvgui_Jay.bak  project.uvopt  project.uvproj  stepper_motor.lst  time.lst  usart.lst
4-单片机比赛工程模板/USER/: main.c  main.c.bak  main.h
4.单片机比赛工程模板/: project.uvproj
(+112 files in other folders)
